# owo-Launcher

./: README.md  index.html  package-lock.json  package.json
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/assets/: app.css
src/components/: Head.vue
src/utils/: LaunchGame.ts
src/views/: Home.vue
